<resources>
    <string name="app_name">CTC2 APP</string>
    <string name="about_dialog_title">About Neurotechnology</string>
    <string name="msg_another_task_in_progress">Another task is in progress at the moment</string>
    <string name="msg_about_company">Neurotechnology</string>
    <string name="msg_camera_is_not_available">Camera is not available</string>
    <string name="msg_could_not_create_directory">Could not create directory</string>
    <string name="msg_crash_notif_title">Biometrics has crashed…</string>
    <string name="msg_enter_id">Please enter user ID:</string>
    <string name="msg_error">Error</string>
    <string name="msg_error_opening_file">Error opening file</string>
    <string name="msg_extract">Extract</string>
    <string name="msg_id_requirements">User id must be non-empty and unique</string>
    <string name="msg_initializing">Initializing…</string>
    <string name="msg_initializing_client">Initializing client…</string>
    <string name="msg_copying_resources">Copying resources…</string>
    <string name="msg_load">Load</string>
    <string name="msg_please_wait">Please wait…</string>
    <string name="msg_name_empty">Template must have a name</string>
    <string name="msg_no_such_id">There is no candidate with such id</string>
    <string name="msg_not_valid_id">Entered id is not valid!</string>
    <string name="msg_name_exists">The specified name is already in use. Please enter a different name.</string>
    <string name="msg_no_records_in_database">There are no records in the database</string>
    <string name="msg_no_record_loaded">No record loaded</string>
    <string name="msg_retry">Retry</string>
    <string name="msg_ready">Ready</string>
    <string name="msg_found">Found</string>
    <string name="msg_not_found">Not found</string>
    <string name="msg_smile">Smile</string>
    <string name="msg_database">Database</string>
    <string name="msg_capturing_device_is_unavailable">Please make sure the capturing device is plugged in</string>
    <string name="msg_processing">Processing...</string>
    <string name="msg_no_device_selected">No device selected</string>
    <string name="msg_metadata">Metadata</string>
    <string name="msg_score">Score</string>
    <string name="msg_name">Name</string>
    <string name="msg_user_name">User name</string>
    <string name="msg_user_id">User id</string>
    <string name="menu_about">About</string>
    <string name="menu_database">Database</string>
    <string name="menu_activation">Activation</string>
    <string name="menu_licensing">Licensing</string>
    <string name="menu_connection">Connection</string>
    <string name="msg_again">Again</string>
    <string name="msg_repeat">Repeat</string>
    <string name="msg_done">Done</string>
    <string name="menu_preferences">Preferences</string>
    <string name="menu_clear_db">Clear database</string>
    <string name="menu_view_db">View database</string>
    <string name="msg_operation_succeeded">Operation succeeded</string>
    <string name="msg_operation_failed">Operation failed</string>
    <string name="msg_failed_to_load_image_or_standard">File did not contain supported image or standard</string>
    <string name="msg_battery_level_error">The remaining battery percentage is less than 20%. Liveness not available</string>
    <string name="msg_extraction">Extraction</string>
    <string name="msg_extracting">Extracting…</string>
    <string name="msg_extracting_please_wait">Extracting. Please wait…</string>
    <string name="msg_extraction_succeeded">Extraction succeeded</string>
    <string name="msg_extraction_failed">Template extraction failed: %1$s</string>
    <string name="msg_liveness_check_failed">Liveness check failed</string>
    <string name="msg_extraction_error">Error occurred during extraction</string>
    <string name="msg_phrase_can_be_repeated">Note: phrase can be repeated to improve recognition quality</string>
    <string name="msg_enroll">Enroll</string>
    <string name="msg_enrollment">Enrollment</string>
    <string name="msg_enrolling">Enrolling…</string>
    <string name="msg_enrollment_succeeded">Enrollment succeeded</string>
    <string name="msg_enrollment_failed">Enrollment failed: %1$s</string>
    <string name="msg_no_matches">No matches found</string>
    <string name="msg_verification">Verification</string>
    <string name="msg_verify">Verify</string>
    <string name="msg_verifying">Verifying…</string>
    <string name="msg_person_verified">Person verified</string>
    <string name="msg_verification_succeeded">Verification succeeded</string>
    <string name="msg_verification_failed">Verification failed: %1$s</string>
    <string name="msg_identification">Identification</string>
    <string name="msg_identify">Identify</string>
    <string name="msg_identifying">Identifying…</string>
    <string name="msg_identification_fail">Identification failed</string>
    <string name="msg_identification_error">Error occurred during identification</string>
    <string name="msg_identification_results">ID: %1$s</string>
    <string name="msg_identification_results_with_score">Name: %1$s. Score: %2$d</string>
    <string name="msg_none">None</string>
    <string name="msg_ok">OK</string>
    <string name="msg_timeout">Process has timed out</string>
    <string name="msg_source_missing">Source missing</string>
    <string name="msg_cleaning_needed">Cleaning is needed</string>
    <string name="msg_objects_not_removed">Objects have not been removed</string>
    <string name="msg_object_missing">Object is missing</string>
    <string name="msg_object_not_found"> Object is not found</string>
    <string name="msg_too_few_objects">Too few object</string>
    <string name="msg_too_many_objects">Too many objects</string>
    <string name="msg_bad_object_sequence">Bad object sequence</string>
    <string name="msg_spoof_detected">Spoof has been detected</string>
    <string name="msg_bad_object">The object is bad</string>
    <string name="msg_bad_dynamic_range">Bad dynamic range</string>
    <string name="msg_bad_exposure">Bad exposure</string>
    <string name="msg_bad_sharpness">Bad sharpness</string>
    <string name="msg_too_few_features">Too few features</string>
    <string name="msg_too_soft">The object is too soft</string>
    <string name="msg_too_hard">The object is too hard</string>
    <string name="msg_bad_position">Object is in bad position</string>
    <string name="msg_too_north">Object is placed too far north</string>
    <string name="msg_too_east">Object is placed too far east</string>
    <string name="msg_too_south">Object is placed too far south</string>
    <string name="msg_too_west">Object is placed too far west</string>
    <string name="msg_too_close">Object is placed too close</string>
    <string name="msg_too_far">Object is placed too far</string>
    <string name="msg_bad_speed">Bad speed</string>
    <string name="msg_too_slow">Too slow</string>
    <string name="msg_too_fast">Too fast</string>
    <string name="msg_bad_size">Size is bad</string>
    <string name="msg_too_short">Object is too short</string>
    <string name="msg_too_long">Object is too long</string>
    <string name="msg_too_narrow">Object is too narrow</string>
    <string name="msg_too_wide">Object is too wide</string>
    <string name="msg_too_skewed">Object is too skewed</string>
    <string name="msg_wrong_direction">Direction is wrong</string>
    <string name="msg_too_few_samples">Too few samples</string>
    <string name="msg_incompatible_samples">Incompatible samples</string>
    <string name="msg_source_not_found">Source not found</string>
    <string name="msg_incompatible_source">Incompatible source</string>
    <string name="msg_id_not_found">ID not found</string>
    <string name="msg_duplicate_id">Duplicate ID</string>
    <string name="msg_match_not_found">Match not found</string>
    <string name="msg_duplicate_found">Duplicate found</string>
    <string name="msg_invalid_operations">Invalid operations</string>
    <string name="msg_invalid_id">Invalid ID</string>
    <string name="msg_invalid_query">Invalid query</string>
    <string name="msg_invalid_property_value">Invalid property value</string>
    <string name="msg_invalid_field_value">Invalid field value</string>
    <string name="msg_operation_not_supported">Operation not supported</string>
    <string name="msg_operation_not_activated">Operation not activated</string>
    <string name="msg_source_error">Source error</string>
    <string name="msg_capture_error">Capture error</string>
    <string name="msg_communication_error">Communication error</string>
    <string name="msg_internal_error">Internal error</string>
    <string name="preferences_general_section">General</string>
    <string name="preferences_extraction">Extraction</string>
    <string name="preferences_matching">Matching</string>
    <string name="preferences_matching_speed">Matching speed</string>
    <string name="preferences_template_size">Template size</string>
    <string name="preferences_quality_threshold">Quality threshold</string>
    <string name="preferences_finger_fast_extraction">Fast extraction</string>
    <string name="preferences_finger_return_processed_image">Return processed image</string>
    <string name="preferences_finger_return_binarized_image">Return binarized image</string>
    <string name="preferences_face_matching_speed">Speed</string>
    <string name="preferences_face_matching_threshold">Matching threshold</string>
    <string name="preferences_check_for_duplicates_multimodal">Perform duplicate check</string>
    <string name="preferences_enrollment_check_for_duplicates">Check for duplicates</string>
    <string name="preferences_reset_to_defaults">Set default values</string>
    <string name="preferences_reset_to_defaults_summary">Sets all preferences to factory defaults</string>
    <string name="msg_delete">Delete</string>
    <string name="msg_modify">Modify</string>
    <string name="msg_db_empty">Database is empty</string>
    <string name="msg_db_entry_delete_question">Are you sure you want to delete this template?</string>
    <string name="preference_connection_sqlite_database_connection">SQLite database connection</string>
    <string name="preference_connection_remote_cluster_server">Remote cluster server</string>
    <string name="preference_connection_remote_cluster_server_address">Server address</string>
    <string name="preference_connection_remote_cluster_client_port">Client port</string>
    <string name="preference_connection_remote_cluster_admin_port">Admin port</string>
    <string name="menuhome">Home</string>
    <string name="menurecencytesting">Recency Testing</string>
    <string name="menuhts">HIV Testing Service</string>
    <string name="menu_clients">Clients</string>
    <string name="action_login">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_register">Register Here</string>
    <string name="app_name_header">Ministry of Health CTC2 App</string>
    <string name="menu_ctc">CTC</string>
    <string name="menu_covid">COVID</string>
    <string name="menu_pharmacy">Pharmacy</string>
    <string name="menu_data_sync">Data Sync</string>
    <string name="action_cancel">Cancel</string>
    <string name="app_ctc_hfr_code">HFR Code Example 120550-9</string>
    <string name="app_ctc_code">CTC Code</string>
    <string name="app_ctc_facility">Facility Name</string>
    <string name="app_ctc_facility_type">Facility Type</string>
    <string name="app_ctc_region_name">Region Name</string>
    <string name="app_ctc_council_name">Council</string>
    <string name="app_ctc_ward_name">Ward</string>
    <string name="action_facility_confirmation">Confirm</string>
    <string name="logout">Logout</string>
    <string name="msg_activate">Activate</string>
    <string name="msg_connect">Connect</string>
    <string name="msg_create">Upload</string>
</resources>